add: new api response for controllers